Añadido logo de la app, simplificado el documento en el que se guardan las imágenes, ya cargan todas y se muestran, queda programar el funcionamiento el botón que hace el shuffle

--- a/TareaiOS/Base.lproj/Main.storyboard
+++ b/TareaiOS/Base.lproj/Main.storyboard
@@ -52,10 +52,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="PorshceRojo" translatesAutoresizingMaskIntoConstraints="NO" id="FWl-iu-11f">
-                                <rect key="frame" x="74" y="285" width="240" height="219"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iEX-cJ-YIg">
                                 <rect key="frame" x="140" y="733" width="109" height="43"/>
                                 <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
@@ -72,8 +68,8 @@
                                     <action selector="home:" destination="8wP-Xg-zAo" eventType="touchUpInside" id="ZYa-te-M57"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C7g-ES-tU6">
-                                <rect key="frame" x="87" y="88" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="FWl-iu-11f">
+                                <rect key="frame" x="74" y="289" width="240" height="219"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -109,7 +105,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="PorshceRojo" width="1024" height="1024"/>
+        <image name="image1" width="1024" height="1024"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
