--- a/TareaiOS/Base.lproj/Main.storyboard
+++ b/TareaiOS/Base.lproj/Main.storyboard
@@ -52,24 +52,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iEX-cJ-YIg">
-                                <rect key="frame" x="140" y="733" width="109" height="43"/>
-                                <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" systemColor="systemBackgroundColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Jugar">
-                                    <backgroundConfiguration key="background">
-                                        <color key="backgroundColor" systemColor="systemRedColor"/>
-                                        <color key="strokeColor" systemColor="labelColor"/>
-                                    </backgroundConfiguration>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="JugarBtn:" destination="8wP-Xg-zAo" eventType="touchUpInside" id="rZh-fQ-nPf"/>
-                                    <action selector="home:" destination="8wP-Xg-zAo" eventType="touchUpInside" id="ZYa-te-M57"/>
-                                </connections>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="FWl-iu-11f">
-                                <rect key="frame" x="74" y="289" width="240" height="219"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mHE-eu-Pis">
+                                <rect key="frame" x="87" y="180" width="240" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -78,7 +62,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="5z5-qo-Wab"/>
                     <connections>
-                        <outletCollection property="imageViews" destination="FWl-iu-11f" collectionClass="NSMutableArray" id="Jb4-tu-PLY"/>
+                        <outletCollection property="imageViews" destination="mHE-eu-Pis" collectionClass="NSMutableArray" id="22E-Xy-m3b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XhR-WW-2ZI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -103,9 +87,23 @@
             </objects>
             <point key="canvasLocation" x="1446.376811594203" y="-374.33035714285711"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="0xQ-hX-hCH">
+            <objects>
+                <viewController id="8KW-bR-cth" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OGF-0F-Ovj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="NPI-VY-Xxf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LIf-sW-oL2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4371" y="-374"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="image1" width="1024" height="1024"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
